@@ -5,10 +5,12 @@
 - added z-tests for everything non-transparent
 - converted 0 to NULL for null pointers
 - changed internals for:
-  collision detection, turns, movement, trails, 
+- collision detection, turns, movement, trails, 
 - messed with trail drawing (z-buffer), moved that to trail.c
 - added mouse callbacks (glut only) and stubs in the gui
+- added mouse callbacks for SDL and SYSTEM_MOUSEUP, SYSTEM_MOUSEDOWN constants
 - colored debug texture (2D map)
+
 
 0.53 to 0.59
 most important visible changes (including the ones to 0.59beta)
